syntax = "proto3";

package guru.qa.grpc.rococo;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.rococo";
option java_outer_classname = "RococoArtistProto";

service RococoArtistService {
    rpc ListArtists (ListArtistsRequest) returns (ListArtistsResponse) {}
    rpc GetArtistById (ArtistRequest) returns (Artist) {}
    rpc CreateArtist (Artist) returns (Artist) {}
    rpc UpdateArtist (Artist) returns (Artist) {}
}

message ListArtistsRequest {
    optional string name = 1;
    int32 page = 2;
    int32 size = 3;
}

message ListArtistsResponse {
    repeated Artist artists = 1;
    int32 total_count = 2;
}

message ArtistRequest {
    string id = 1;
}

message Artist {
    string id = 1;
    string name = 2;
    string biography = 3;
    string photo = 4;
}

