syntax = "proto3";

package guru.qa.grpc.rococo;

import "rococo-geo.proto";

option java_multiple_files = true;
option java_package = "guru.qa.grpc.rococo";
option java_outer_classname = "RococoMuseumProto";

service RococoMuseumService {
    rpc GetAllMuseums (AllMuseumsRequest) returns (AllMuseumsResponse) {}
    rpc GetMuseumById (MuseumRequest) returns (Museum) {}
    rpc CreateMuseum (Museum) returns (Museum) {}
    rpc UpdateMuseum (Museum) returns (Museum) {}
}

message AllMuseumsRequest {
    optional string title = 1;
    int32 page = 2;
    int32 size = 3;
}

message AllMuseumsResponse {
    repeated Museum museums = 1;
    int64 total_count = 2;
}

message MuseumRequest {
    string id = 1;
}

message Museum {
    string id = 1;
    string title = 2;
    string description = 3;
    string photo = 4;
    Geo geo = 5;
}

message Geo {
    string city = 1;
    Country country = 2;
}

